--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.nav_version = "2.5.3"
+    ext.koin_version = "3.1.2"
+
     repositories {
         google()
         mavenCentral()
@@ -9,6 +11,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "io.insert-koin:koin-gradle-plugin:$koin_version"
     }
 }
 
