--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,13 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
-
     // Koin
     implementation "io.insert-koin:koin-android:$koin_version"
     testImplementation "io.insert-koin:koin-test:$koin_version"
+
+    // Paging
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
 
 
 
