--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
 
+    // UI
+    implementation "com.github.duanhong169:drawabletoolbox:1.0.7" // On JCenter
+
+
 
 
 
