--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+
 
     }
     dependencies {
@@ -23,6 +25,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+
 
     }
 
